numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@expected_left_paren_in_fn_definition.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/expected_left_paren_in_fn_definition.nbt
---
error: while parsing
  ┌─ <internal:3>:1:6
  │
1 │ fn f = 1
  │      ^ Expected opening parenthesis '(' in function definition
